kubernetes/apps/external-ingresses/zigbee2mqtt/casa-radio/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee-casa-radio-proxy-service
  namespace: external-ingresses
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zigbee-casa-radio-proxy-service
  namespace: external-ingresses
subsets:
  - addresses:
      - ip: 10.30.20.5 # zig2mqcaseRadio.jaimenet.com - SLZB-MR3U coordinator
    ports:
      - port: 80
        name: http
        protocol: TCP
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee-casa-radio-httproute
  namespace: external-ingresses
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Zigbee Casa Radio (SLZB-MR3U)
    gethomepage.dev/group: Home Automation
    gethomepage.dev/icon: si-zigbee2mqtt.svg
    gethomepage.dev/name: Zigbee Casa Radio
    gethomepage.dev/showStats: "false"
spec:
  hostnames:
    - zigbee-casa-radio.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee-casa-radio-proxy-service
          namespace: external-ingresses
          port: 80
          weight: 1
